# simpledualeq-dpf

./: .gitignore  CMakeLists.txt  README.md
dsp/: Biquad.hpp  DspMath.hpp  ParametricEq.hpp
plugin/: DistrhoPluginInfo.h  ParameterMetadata.hpp  SimpleDualEqPlugin.cpp  SimpleDualEqPlugin.hpp  SimpleDualEqUI.cpp  SimpleDualEqUI.hpp
test/: CMakeLists.txt  README.md  compare_wavs.py  null_test_vs_juce.sh  test_biquad.cpp  test_dsp_math.cpp  test_parametric_eq.cpp  test_plugin_offline.cpp
test/fixtures/: generate_input.py
